tests/baselines/reference/Protected8(strict=true).errors.txt
Protected8.ts(2,4): error TS7008: Member 'protected' implicitly has an 'any' type.
Protected8.ts(3,4): error TS7008: Member 'p' implicitly has an 'any' type.


==== Protected8.ts (2 errors) ====
    interface I {
       protected
       ~~~~~~~~~
!!! error TS7008: Member 'protected' implicitly has an 'any' type.
       p
       ~
!!! error TS7008: Member 'p' implicitly has an 'any' type.
    }